package model;

public class Canoe extends Boat {

    public Canoe(String name, String model, int boatLength) {
        super.length = boatLength;
        super.name = name;
        super.modelName = model;
    }

    public Canoe(){}
    
}
