package model;

public class Kayak extends Boat {


    public Kayak(String name, String model, int boatLength) {
        super.length = boatLength;
        super.name = name;
        super.modelName = model;
    }

    public Kayak(){}

}