package model;

public class MotorBoat extends Boat {


    public MotorBoat(String name, String model, int boatLength) {
        super.length = boatLength;
        super.name = name;
        super.modelName = model;
    }

    public MotorBoat(){}

}