package model;

public class Other extends Boat {

    public Other(String name, String model, int boatLength) {
        super.length = boatLength;
        super.name = name;
        super.modelName = model;
    }

    public Other(){}

}