@startuml PiratesClassDiagram
!define DARKBLUE
!includeurl https://raw.githubusercontent.com/Drakemor/RedDress-PlantUML/master/style.puml

package "model"{
    
    interface IViewObserver

    class Member {
        member: Member
        boats: ArrayList<Boats>
    }

    class RuntimeTypAdapterFactory {
        
    }

    class SavedInstanceState {

    }

    class SavedState {

    }

    abstract Boat 

    class MotorBoat {
        
    }

    class Canoe {
        
    }

    class SailBoat {
        
    }

    class Kayak {
       
    }

    class Other {
        
    }



    Boat <|-- MotorBoat
    Boat <|-- Canoe
    Boat <|-- SailBoat
    Boat <|-- Kayak
    Boat <|-- Other

    }

package controller {
    class BaseController {
        - savedInstanceState: SavedInstanceState 
    }
    class RegisterController {
        - currentState: SavedState 
    }

    IViewObserver <|... RegisterController
    BaseController <|- RegisterController
    Boat <... RegisterController
    Member <. RegisterController
    SavedState <-- RegisterController
    SavedInstanceState <--- BaseController
    Member <- SavedState
    Boat <- SavedState
}

package view {
    abstract BaseView {
        ~ mSubscribers: ArrayList<IViewObserver> 
        ~ controller: RegisterController 
    }

    class CompactView {
       
    }

    class EditBoatView {
        
    }

    class EditMemberView {
        
    }

    class ListBoatView {
        
    }

    class MemberInfoView {
        
    }

    class MenuView {
        
    }

    class VerboseView {
        
    }

     
    MenuView <|-- BaseView
    CompactView <|-- BaseView
    EditBoatView <|-- BaseView
    EditMemberView <|-- BaseView
    ListBoatView <|-- BaseView
    MemberInfoView <|-- BaseView
    VerboseView <|-- BaseView
    IViewObserver <--- BaseView
    RegisterController <--- BaseView
    Member <... BaseView
}
@enduml

